# Open-ECG-Digitizer-fork

./: CHANGELOG.md  README.md  augmentations.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml
oed/hp_optimizer/: optimize.py  utils.py
src/: train.py  utils.py
src/config/: default.py  evaluate.yml  unet.yml
src/dataset/: ecg_scan.py
src/loss/: loss.py
src/model/: dewarper.py  grid_detector.py  inference_wrapper.py  perspective_detector.py  signal_extractor.py  unet.py
src/report/: binarization_example.py
src/scripts/: redact.ipynb
src/scripts/redact/: detect_redacted_regions.ipynb
src/transform/: vision.py
test/: test_config.py  test_grid_detector.py  test_perspective_detector.py
test/test_data/config/: segformer.yml  unet.yml  unet_compilation.yml
